# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-messaging"
description = "EXOCHAIN constitutional trust fabric — end-to-end encrypted messaging with X25519 key exchange"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_messaging"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.2" }
exo-identity = { package = "exochain-identity", path = "../exo-identity", version = "=0.2.2" }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
