[package]
name = "exo-proofs"
description = "EXOCHAIN zero-knowledge proof system -- SNARK, STARK, ZKML verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
serde = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["sha2"]
