[package]
name = "exo-proofs"
description = "EXOCHAIN zero-knowledge proof skeleton -- UNAUDITED, pedagogical only. See crate README."
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Opt-in flag required to execute any proof/verify/setup API. Without it,
# every entry point returns ProofError::UnauditedImplementation. This is a
# safety rail: exo-proofs is a structural skeleton, not production crypto.
#
# DO NOT enable in production. Enabling this feature does NOT make the
# proofs cryptographically sound — it merely unlocks the skeleton for
# tests/demos/classroom use.
unaudited-pedagogical-proofs = []

[dependencies]
exo-core = { path = "../exo-core" }
serde = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["sha2"]
