# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-proofs"
description = "EXOCHAIN zero-knowledge proof skeleton -- UNAUDITED, pedagogical only. See crate README."
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_proofs"
path = "src/lib.rs"

[lints]
workspace = true

[features]
# Opt-in flag required to execute any proof/verify/setup API. Without it,
# every entry point returns ProofError::UnauditedImplementation. This is a
# safety rail: exo-proofs is a structural skeleton, not production crypto.
#
# DO NOT enable in production. Enabling this feature does NOT make the
# proofs cryptographically sound — it merely unlocks the skeleton for
# tests/demos/classroom use.
unaudited-pedagogical-proofs = []

[dependencies]
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.1-beta" }
serde = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ciborium = { workspace = true }
# Verifier-only vendoring of RISC Zero (VCG-001b/c, ratified decision D1).
# default-features = false is MANDATORY: risc0-zkvm's default features pull
# in the full prover client + Bonsai remote-proving stack, neither of which
# this crate ever needs -- EXOCHAIN proving is server-side-only elsewhere and
# this crate is verifier-only. "std" is the minimal feature that keeps
# Receipt::verify's dependency graph (Groth16 verifying key material, seal
# decoding) buildable off std. This crate deliberately does NOT depend on any
# "prove"/"client"/"bonsai" feature -- pulling those in would reintroduce the
# exact heavy prover surface (and its supply chain) this seam is designed to
# avoid on the verify-only path.
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["sha2"]
