[package]
name = "exo-tenant"
description = "EXOCHAIN constitutional trust fabric — multi-tenant isolation, cold storage, sharding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["blake3", "exo-identity"]
