[package]
name = "exochain-sdk"
description = "EXOCHAIN SDK — ergonomic Rust API for the constitutional governance fabric"
documentation = "https://docs.exochain.io/sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Core crates (only those actually `use`d today; see removed-deps
# note in commit message when adding back — avoid drift between
# `pub use` surface and dependency graph)
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
exo-gatekeeper = { path = "../exo-gatekeeper" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Crypto
blake3 = { workspace = true }
