# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-sdk"
description = "EXOCHAIN SDK — ergonomic Rust API for the constitutional governance fabric"
documentation = "https://docs.exochain.io/sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Core crates (only those actually `use`d today; see removed-deps
# note in commit message when adding back — avoid drift between
# `pub use` surface and dependency graph)
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
exo-gatekeeper = { path = "../exo-gatekeeper" }
exo-avc = { path = "../exo-avc" }
exo-economy = { path = "../exo-economy" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Crypto
blake3 = { workspace = true }
