# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-sdk"
description = "EXOCHAIN SDK — ergonomic Rust API for the constitutional governance fabric"
documentation = "https://docs.exochain.io/sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exochain_sdk"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Core crates (only those actually `use`d today; see removed-deps
# note in commit message when adding back — avoid drift between
# `pub use` surface and dependency graph)
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.0-beta" }
exo-dag-db-api = { package = "exochain-dag-db-api", path = "../exo-dag-db-api", version = "=0.2.0-beta" }
exo-identity = { package = "exochain-identity", path = "../exo-identity", version = "=0.2.0-beta" }
exo-gatekeeper = { package = "exochain-gatekeeper", path = "../exo-gatekeeper", version = "=0.2.0-beta" }
exo-avc = { package = "exochain-avc", path = "../exo-avc", version = "=0.2.0-beta" }
exo-economy = { package = "exochain-economy", path = "../exo-economy", version = "=0.2.0-beta" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Crypto
blake3 = { workspace = true }

# HTTP transport (optional — only compiled with the `http-client` feature so
# the spec-only SDK stays free of the async HTTP stack). reqwest is pinned to
# the same version + feature set already used by exo-node (rustls, no default
# OpenSSL); zeroize redacts the bearer token from Debug output.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
zeroize = { workspace = true, optional = true }

[features]
default = []
# Real async HTTP client (`DagDbHttpClient`) for calling a live DAG DB gateway.
# Off by default: consumers who only need the request-spec builder pay no HTTP
# dependency cost.
http-client = ["dep:reqwest", "dep:zeroize"]

[dev-dependencies]
# Async test runtime + a minimal in-process TCP server stand in for a live
# gateway when exercising the HTTP client; no external mock-server crate is a
# workspace dependency.
tokio = { workspace = true }
